--- a/pppppp/CreatePoint/HealthDataView.storyboard
+++ b/pppppp/CreatePoint/HealthDataView.storyboard
@@ -6,6 +6,11 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="F5.6-Regular.otf">
+            <string>F5.6-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Health Data View Controller-->
         <scene sceneID="F14-vT-27l">
@@ -15,27 +20,73 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="62u-dQ-csJ">
-                                <rect key="frame" x="247" y="505" width="67" height="31"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
-                                <connections>
-                                    <action selector="writeWeightData" destination="9Dv-30-eAN" eventType="touchUpInside" id="wVA-BB-966"/>
-                                </connections>
-                            </button>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="loL-8f-2LO">
-                                <rect key="frame" x="100" y="505" width="97" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bMI-by-4Vb">
+                                <rect key="frame" x="24" y="84" width="366" height="176"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter Current Weight here." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GYI-q8-w9F">
+                                        <rect key="frame" x="24" y="24" width="203" height="19.5"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="loL-8f-2LO">
+                                        <rect key="frame" x="24" y="59.5" width="232" height="88"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.23999999999999999" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="88" id="ch5-9b-3a1"/>
+                                            <constraint firstAttribute="width" constant="232" id="vPC-a4-2Yb"/>
+                                        </constraints>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" name="F5.6-Regular" family="F5.6" pointSize="30"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
+                                    </textField>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="kg" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q0e-1S-wNx">
+                                        <rect key="frame" x="220" y="93" width="19" height="20"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="62u-dQ-csJ">
+                                        <rect key="frame" x="286" y="87" width="64" height="32"/>
+                                        <color key="backgroundColor" red="0.52156862745098043" green="0.62745098039215685" blue="0.77254901960784317" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="32" id="yk7-uR-pLh"/>
+                                        </constraints>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Add">
+                                            <fontDescription key="titleFontDescription" type="system" weight="medium" pointSize="16"/>
+                                            <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </buttonConfiguration>
+                                        <connections>
+                                            <action selector="writeWeightData" destination="9Dv-30-eAN" eventType="touchUpInside" id="wVA-BB-966"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="GYI-q8-w9F" firstAttribute="leading" secondItem="bMI-by-4Vb" secondAttribute="leading" constant="24" id="6sc-y8-hQ9"/>
+                                    <constraint firstItem="q0e-1S-wNx" firstAttribute="leading" secondItem="bMI-by-4Vb" secondAttribute="leading" constant="220" id="7sf-EX-RJK"/>
+                                    <constraint firstItem="GYI-q8-w9F" firstAttribute="top" secondItem="bMI-by-4Vb" secondAttribute="top" constant="24" id="CpJ-2a-ro8"/>
+                                    <constraint firstItem="q0e-1S-wNx" firstAttribute="top" secondItem="bMI-by-4Vb" secondAttribute="top" constant="93" id="Gxp-Bq-QOH"/>
+                                    <constraint firstAttribute="height" constant="176" id="J8c-0s-gqD"/>
+                                    <constraint firstItem="loL-8f-2LO" firstAttribute="leading" secondItem="bMI-by-4Vb" secondAttribute="leading" constant="24" id="UpR-bV-FNB"/>
+                                    <constraint firstAttribute="trailing" secondItem="62u-dQ-csJ" secondAttribute="trailing" constant="16" id="gDj-VQ-Gm0"/>
+                                    <constraint firstItem="62u-dQ-csJ" firstAttribute="top" secondItem="bMI-by-4Vb" secondAttribute="top" constant="87" id="mFE-HP-7qx"/>
+                                    <constraint firstItem="loL-8f-2LO" firstAttribute="top" secondItem="GYI-q8-w9F" secondAttribute="bottom" constant="16" id="xu1-gX-maV"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="SVz-Sw-HEj"/>
                         <color key="backgroundColor" red="0.074509803920000006" green="0.0" blue="0.29803921570000003" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="bMI-by-4Vb" firstAttribute="leading" secondItem="SVz-Sw-HEj" secondAttribute="leading" constant="24" id="1hF-RT-8nW"/>
+                            <constraint firstItem="bMI-by-4Vb" firstAttribute="top" secondItem="SVz-Sw-HEj" secondAttribute="top" constant="40" id="WXa-aj-mat"/>
+                            <constraint firstItem="SVz-Sw-HEj" firstAttribute="trailing" secondItem="bMI-by-4Vb" secondAttribute="trailing" constant="24" id="kAK-Tb-vKy"/>
+                        </constraints>
                     </view>
                     <connections>
+                        <outlet property="backgroundView" destination="bMI-by-4Vb" id="thh-5Q-6ge"/>
                         <outlet property="weightTextField" destination="loL-8f-2LO" id="NVM-Kf-t6S"/>
+                        <outlet property="writeWeightDataLayout" destination="62u-dQ-csJ" id="Llv-0f-qwV"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rSU-1W-kfG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
