--- a/pppppp/View/AuthView/LoginView.storyboard
+++ b/pppppp/View/AuthView/LoginView.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -65,21 +66,31 @@
                                     <action selector="goButtonPressed" destination="j38-ue-eF5" eventType="touchUpInside" id="YNB-os-ETd"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qQ2-9i-BUs">
+                                <rect key="frame" x="32" y="621" width="350" height="48"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="48" id="8w4-Ar-va3"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="dar-mQ-isV"/>
                         <color key="backgroundColor" red="0.070588235289999995" green="0.0" blue="0.29803921570000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="jTm-R9-yn1" firstAttribute="centerX" secondItem="Wev-PF-J9D" secondAttribute="centerX" id="0yI-FH-Sta"/>
+                            <constraint firstItem="qQ2-9i-BUs" firstAttribute="top" secondItem="nZV-NE-UkS" secondAttribute="bottom" constant="20" id="3I1-WO-cFY"/>
                             <constraint firstItem="dar-mQ-isV" firstAttribute="trailing" secondItem="WcI-WB-yXS" secondAttribute="trailing" constant="32" id="4v5-5f-dKg"/>
                             <constraint firstItem="nZV-NE-UkS" firstAttribute="top" secondItem="Ilx-46-FQq" secondAttribute="bottom" constant="20" id="5bE-rf-aTa"/>
                             <constraint firstItem="1iO-s8-HTc" firstAttribute="centerX" secondItem="Wev-PF-J9D" secondAttribute="centerX" id="9Pp-Pw-W6I"/>
                             <constraint firstItem="jTm-R9-yn1" firstAttribute="leading" secondItem="dar-mQ-isV" secondAttribute="leading" constant="32" id="9XI-Sj-7LX"/>
                             <constraint firstItem="WcI-WB-yXS" firstAttribute="centerX" secondItem="Wev-PF-J9D" secondAttribute="centerX" id="AnK-ER-jcO"/>
+                            <constraint firstItem="dar-mQ-isV" firstAttribute="trailing" secondItem="qQ2-9i-BUs" secondAttribute="trailing" constant="32" id="FDs-cy-An8"/>
                             <constraint firstItem="dar-mQ-isV" firstAttribute="trailing" secondItem="jTm-R9-yn1" secondAttribute="trailing" constant="32" id="Kly-XN-EcL"/>
                             <constraint firstItem="WcI-WB-yXS" firstAttribute="top" secondItem="1iO-s8-HTc" secondAttribute="bottom" constant="25" id="MOL-EH-Wen"/>
                             <constraint firstItem="jTm-R9-yn1" firstAttribute="top" secondItem="WcI-WB-yXS" secondAttribute="bottom" constant="25" id="S7y-BH-Tqg"/>
                             <constraint firstItem="nZV-NE-UkS" firstAttribute="centerX" secondItem="Wev-PF-J9D" secondAttribute="centerX" id="SqE-xO-OxR"/>
                             <constraint firstItem="Ilx-46-FQq" firstAttribute="leading" secondItem="dar-mQ-isV" secondAttribute="leading" constant="32" id="VUk-ge-uc2"/>
+                            <constraint firstItem="qQ2-9i-BUs" firstAttribute="leading" secondItem="dar-mQ-isV" secondAttribute="leading" constant="32" id="VWD-bP-2eW"/>
                             <constraint firstItem="Ilx-46-FQq" firstAttribute="centerX" secondItem="Wev-PF-J9D" secondAttribute="centerX" id="Vvm-Yi-s1c"/>
                             <constraint firstItem="Ilx-46-FQq" firstAttribute="top" secondItem="jTm-R9-yn1" secondAttribute="bottom" constant="20" id="gkf-yv-h0K"/>
                             <constraint firstItem="WcI-WB-yXS" firstAttribute="leading" secondItem="dar-mQ-isV" secondAttribute="leading" constant="32" id="pvN-9h-RF2"/>
@@ -88,6 +99,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="buttonView" destination="qQ2-9i-BUs" id="vA6-UF-cCc"/>
                         <outlet property="emailTextField" destination="WcI-WB-yXS" id="iuy-T2-rqd"/>
                         <outlet property="loginButtonLayout" destination="Ilx-46-FQq" id="fo0-f9-B9R"/>
                         <outlet property="loginLabel" destination="1iO-s8-HTc" id="iD2-wN-wKi"/>
@@ -99,4 +111,9 @@
             <point key="canvasLocation" x="1579.7101449275362" y="-224.33035714285714"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
