--- a/pppppp/View/AuthView/LoginView.storyboard
+++ b/pppppp/View/AuthView/LoginView.storyboard
@@ -42,19 +42,6 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <textInputTraits key="textInputTraits" keyboardType="emailAddress" secureTextEntry="YES" textContentType="email"/>
                             </textField>
-                            <button opaque="NO" alpha="0.64999997615814209" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nZV-NE-UkS">
-                                <rect key="frame" x="109.5" y="560" width="195" height="41"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="41" id="CX3-NT-Ury"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="24"/>
-                                <state key="normal" title="Forget password?">
-                                    <color key="titleColor" red="0.98823529409999999" green="0.98823529409999999" blue="0.98823529409999999" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
-                                </state>
-                                <connections>
-                                    <action selector="sentEmailMore" destination="j38-ue-eF5" eventType="touchUpInside" id="kDt-lK-6D3"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ilx-46-FQq">
                                 <rect key="frame" x="32" y="492" width="350" height="48"/>
                                 <constraints>
@@ -67,23 +54,35 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qQ2-9i-BUs">
-                                <rect key="frame" x="32" y="621" width="350" height="48"/>
+                                <rect key="frame" x="32" y="560" width="350" height="48"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="8w4-Ar-va3"/>
                                 </constraints>
                             </view>
+                            <button opaque="NO" alpha="0.64999997615814209" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nZV-NE-UkS">
+                                <rect key="frame" x="109.5" y="628" width="195" height="41"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="41" id="CX3-NT-Ury"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="24"/>
+                                <state key="normal" title="Forget password?">
+                                    <color key="titleColor" red="0.98823529409999999" green="0.98823529409999999" blue="0.98823529409999999" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="sentEmailMore" destination="j38-ue-eF5" eventType="touchUpInside" id="kDt-lK-6D3"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="dar-mQ-isV"/>
                         <color key="backgroundColor" red="0.070588235289999995" green="0.0" blue="0.29803921570000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="jTm-R9-yn1" firstAttribute="centerX" secondItem="Wev-PF-J9D" secondAttribute="centerX" id="0yI-FH-Sta"/>
-                            <constraint firstItem="qQ2-9i-BUs" firstAttribute="top" secondItem="nZV-NE-UkS" secondAttribute="bottom" constant="20" id="3I1-WO-cFY"/>
                             <constraint firstItem="dar-mQ-isV" firstAttribute="trailing" secondItem="WcI-WB-yXS" secondAttribute="trailing" constant="32" id="4v5-5f-dKg"/>
-                            <constraint firstItem="nZV-NE-UkS" firstAttribute="top" secondItem="Ilx-46-FQq" secondAttribute="bottom" constant="20" id="5bE-rf-aTa"/>
                             <constraint firstItem="1iO-s8-HTc" firstAttribute="centerX" secondItem="Wev-PF-J9D" secondAttribute="centerX" id="9Pp-Pw-W6I"/>
                             <constraint firstItem="jTm-R9-yn1" firstAttribute="leading" secondItem="dar-mQ-isV" secondAttribute="leading" constant="32" id="9XI-Sj-7LX"/>
                             <constraint firstItem="WcI-WB-yXS" firstAttribute="centerX" secondItem="Wev-PF-J9D" secondAttribute="centerX" id="AnK-ER-jcO"/>
+                            <constraint firstItem="nZV-NE-UkS" firstAttribute="top" secondItem="qQ2-9i-BUs" secondAttribute="bottom" constant="20" id="Biz-SG-GaK"/>
                             <constraint firstItem="dar-mQ-isV" firstAttribute="trailing" secondItem="qQ2-9i-BUs" secondAttribute="trailing" constant="32" id="FDs-cy-An8"/>
                             <constraint firstItem="dar-mQ-isV" firstAttribute="trailing" secondItem="jTm-R9-yn1" secondAttribute="trailing" constant="32" id="Kly-XN-EcL"/>
                             <constraint firstItem="WcI-WB-yXS" firstAttribute="top" secondItem="1iO-s8-HTc" secondAttribute="bottom" constant="25" id="MOL-EH-Wen"/>
@@ -96,6 +95,7 @@
                             <constraint firstItem="WcI-WB-yXS" firstAttribute="leading" secondItem="dar-mQ-isV" secondAttribute="leading" constant="32" id="pvN-9h-RF2"/>
                             <constraint firstItem="dar-mQ-isV" firstAttribute="trailing" secondItem="Ilx-46-FQq" secondAttribute="trailing" constant="32" id="tWs-yo-I7O"/>
                             <constraint firstItem="jTm-R9-yn1" firstAttribute="centerY" secondItem="Wev-PF-J9D" secondAttribute="centerY" id="xAE-2U-cpB"/>
+                            <constraint firstItem="qQ2-9i-BUs" firstAttribute="top" secondItem="Ilx-46-FQq" secondAttribute="bottom" constant="20" id="xyk-ck-hAe"/>
                         </constraints>
                     </view>
                     <connections>
